cabal-version: 2.4
name: minesweeper
version: 0.0.0.0
synopsis: Assignment 2, CS 410/510 Advanced Functional Programming, Spring 2022.

license: BSD-3-Clause
author: Katie Casamento
maintainer: cas28@pdx.com

category: Education

executable minesweeper
  main-is: Main.hs
  other-modules: Grid, Minesweeper

  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
    base <5,
    brick ^>=0.68.1,
    containers ^>=0.6.4.1,
    finite-typelits ^>=0.1.4.2,
    ghc-typelits-knownnat ^>=0.7.6,
    mtl ^>=2.2.2,
    pretty-simple ^>=4,
    primitive ^>=0.7.3.0,
    random ^>=1.2.1,
    text ^>=1.2.4.1,
    transformers ^>=0.5.6.2,
    vector-sized ^>=1.5.0,
    vty ^>=5.33

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    PartialTypeSignatures
    RankNTypes
    ScopedTypeVariables
    StandaloneKindSignatures
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    UndecidableInstances

  ghc-options:
    -threaded
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fdefer-typed-holes
    -fhelpful-errors
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-monadfail-instances
    -Werror=overflowed-literals
    -Werror=partial-fields
    -Wduplicate-exports
    -Widentities
    -Wname-shadowing
    -Wredundant-constraints
    -Wtyped-holes
    -O
